crates/cyrs-syntax/tests/snapshots/syntax_snapshots__err_list_comprehension_unterminated_where.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"RETURN [x IN xs WHERE x > 1\")"
---
SOURCE_FILE@0..27
  STATEMENT@0..27
    RETURN_CLAUSE@0..27
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..27
        RETURN_ITEMS@6..27
          RETURN_ITEM@6..27
            LIST_COMPREHENSION@6..27
              WHITESPACE@6..7 " "
              L_BRACK@7..8 "["
              NAME@8..9
                IDENT@8..9 "x"
              WHITESPACE@9..10 " "
              IN_KW@10..12 "IN"
              VAR_EXPR@12..15
                WHITESPACE@12..13 " "
                IDENT@13..15 "xs"
              WHITESPACE@15..16 " "
              WHERE_KW@16..21 "WHERE"
              BINARY_EXPR@21..27
                VAR_EXPR@21..23
                  WHITESPACE@21..22 " "
                  IDENT@22..23 "x"
                WHITESPACE@23..24 " "
                GT@24..25 ">"
                LITERAL_EXPR@25..27
                  WHITESPACE@25..26 " "
                  INT_LITERAL@26..27 "1"
---errors---
@27: expected `|` or `]` in list comprehension
