crates/cyrs-syntax/tests/snapshots/syntax_snapshots__err_map_projection_dot_then_garbage.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"MATCH (n) RETURN n { . , .age }\")"
---
SOURCE_FILE@0..31
  STATEMENT@0..31
    MATCH_CLAUSE@0..9
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..9
        PATTERN_PART@5..9
          NODE_PATTERN@5..9
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            R_PAREN@8..9 ")"
    RETURN_CLAUSE@9..31
      WHITESPACE@9..10 " "
      RETURN_KW@10..16 "RETURN"
      RETURN_BODY@16..31
        RETURN_ITEMS@16..31
          RETURN_ITEM@16..31
            MAP_PROJECTION@16..31
              VAR_EXPR@16..18
                WHITESPACE@16..17 " "
                IDENT@17..18 "n"
              WHITESPACE@18..19 " "
              L_BRACE@19..20 "{"
              MAP_PROJECTION_ITEM@20..22
                WHITESPACE@20..21 " "
                DOT@21..22 "."
              WHITESPACE@22..23 " "
              COMMA@23..24 ","
              MAP_PROJECTION_ITEM@24..29
                WHITESPACE@24..25 " "
                DOT@25..26 "."
                IDENT@26..29 "age"
              WHITESPACE@29..30 " "
              R_BRACE@30..31 "}"
---errors---
@23: expected property name or '*' after '.' in map projection item
