crates/cyrs-syntax/tests/snapshots/syntax_snapshots__err_missing_return_target.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
assertion_line: 371
expression: "format_with_errors(\"MATCH (n) RETURN\")"
---
SOURCE_FILE@0..16
  STATEMENT@0..16
    MATCH_CLAUSE@0..9
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..9
        PATTERN_PART@5..9
          NODE_PATTERN@5..9
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            R_PAREN@8..9 ")"
    RETURN_CLAUSE@9..16
      WHITESPACE@9..10 " "
      RETURN_KW@10..16 "RETURN"
      RETURN_BODY@16..16
        RETURN_ITEMS@16..16
          RETURN_ITEM@16..16
---errors---
@16: expected expression in RETURN item
