crates/cyrs-syntax/tests/snapshots/syntax_snapshots__err_unclosed_paren_in_pattern.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
assertion_line: 366
expression: "format_with_errors(\"MATCH (n RETURN n\")"
---
SOURCE_FILE@0..17
  STATEMENT@0..17
    MATCH_CLAUSE@0..8
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..8
        PATTERN_PART@5..8
          NODE_PATTERN@5..8
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
    RETURN_CLAUSE@8..17
      WHITESPACE@8..9 " "
      RETURN_KW@9..15 "RETURN"
      RETURN_BODY@15..17
        RETURN_ITEMS@15..17
          RETURN_ITEM@15..17
            VAR_EXPR@15..17
              WHITESPACE@15..16 " "
              IDENT@16..17 "n"
---errors---
@9: expected ')' to close node pattern
